--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,13 @@
   line-height: 1.42857143;
 }
 
+.full-bag-page{
+  width:100%;
+  padding:20px;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+}
+
 .bag-page {
   width: 75%;
   margin-left: 12.5%;
@@ -18,12 +25,16 @@
 .bag-summary {
   /* position:fixed; */
   vertical-align: top;
-  display: inline-block;
-  width: 35%;
-  padding: 24px 0 0 16px;
+  justify-content: center;
+  /* display: inline-block; */
+  /* width: 100%; */
+  padding-right: 50px;
   color: #282c3f;
   font-size: 13px;
   line-height: 1.42857143;
+     position: relative;
+  /* top: 10%; */
+
 }
 
 .bag-details-container {
@@ -232,6 +243,8 @@ a.action_container:link {
   font-family: Assistant,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
   box-sizing: border-box;
 }
+
+/* haeder css */
 header {
   display: flex;
   background-color: #ffffff;
@@ -382,8 +395,19 @@ header {
 }
 .item-image {
   width: 100%;
+ 
+  transition: transform 0.3s ease; 
+  /* padding-bottom: 10px; */
+  border-radius: 5px;
+  border-bottom: 5px;
+}
+
+.item-image:hover {
+  transform: scale(1.05); /* Slightly enlarges the image */
+  opacity: 0.8;          /* Makes the image slightly transparent */
 }
 .rating {
+  padding-top: 10px;
   font-size: 12px;
   font-weight: 700;
 }
@@ -445,6 +469,10 @@ header {
   border-radius: 10px;
   cursor: pointer;
 }
+.btn-add-bag:hover{
+  background-color:#78d62c;
+}
+
 .bag-item-count {
   background-color: #f16565;
   white-space: nowrap;
@@ -466,4 +494,37 @@ header {
 }
 a.action_container:link {
   color:black;
+}
+
+/* shimmering */
+.shimmer-container{
+  height: 483.13px;
+  width: 250px;
+  border-radius: 5px;
+  background-color: rgb(134, 130, 130);
+}
+.image-shimmer{
+  height: 60%;
+  margin: 10px;
+  background-color:rgb(150, 147, 147);
+}
+.elements{
+  margin-bottom: 20px;
+}
+.element1{
+  margin: 10px;
+  width: 60%;
+  height: 20px;
+  border-radius: 5px;
+  background-color: rgb(150, 147, 147);
+}
+.buttons{
+  margin:10px;
+  height:28px ;
+  border-radius: 5px;
+  background-color:rgb(150, 147, 147) ;
+}
+.shimmer-display-container{
+  display: flex;
+  flex-wrap: wrap;
 }
